--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,15 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft=1.20.1
+minecraft=1.19.2
 forge=47.3.0
 parchment=2023.09.03
 mappingsChannel=parchment
+
+diet=4813904
+blueprint=5292242
+farmers=5051242
+apple=4770828
 
 modName=MindfulEating
 modId=mindful_eating
